implement new tool tiers

--- a/src/main/resources/assets/tce/lang/en_us.json
+++ b/src/main/resources/assets/tce/lang/en_us.json
@@ -1,3 +1,29 @@
 {
-  "item.tce.twine": "Twine"
+  "item.minecraft.wooden_axe": "Flint Hatchet",
+  "item.minecraft.wooden_hoe": "Flint Adze",
+  "item.minecraft.wooden_pickaxe": "Flint Mattock",
+  "item.minecraft.wooden_shovel": "Flint Trowel",
+  "item.minecraft.wooden_sword": "Flint Knife",
+  "item.minecraft.stone_axe": "Copper Axe",
+  "item.minecraft.stone_hoe": "Copper Hoe",
+  "item.minecraft.stone_pickaxe": "Copper Pickaxe",
+  "item.minecraft.stone_shovel": "Copper Shovel",
+  "item.minecraft.stone_sword": "Copper Sword",
+  "item.tce.flint_axe": "Flint Hatchet",
+  "item.tce.flint_hoe": "Flint Adze",
+  "item.tce.flint_pickaxe": "Flint Mattock",
+  "item.tce.flint_shovel": "Flint Trowel",
+  "item.tce.flint_sword": "Flint Knife",
+  "item.tce.bone_axe": "Bone Hatchet",
+  "item.tce.bone_hoe": "Bone Adze",
+  "item.tce.bone_pickaxe": "Bone Mattock",
+  "item.tce.bone_shovel": "Bone Trowel",
+  "item.tce.bone_sword": "Bone Knife",
+  "item.tce.copper_axe": "Copper Axe",
+  "item.tce.copper_hoe": "Copper Hoe",
+  "item.tce.copper_pickaxe": "Copper Pickaxe",
+  "item.tce.copper_shovel": "Copper Shovel",
+  "item.tce.copper_sword": "Copper Sword",
+  "item.tce.twine": "Twine",
+  "itemgroup.tce": "Alternate Progression"
 }
