oven that doesnt work

--- a/src/main/resources/assets/tce/lang/en_us.json
+++ b/src/main/resources/assets/tce/lang/en_us.json
@@ -26,5 +26,6 @@
   "item.tce.grout": "Grout",
   "item.tce.stone_brick": "Stone Brick",
   "block.tce.cobbled_blackstone": "Cobbled Blackstone",
+  "block.tce.oven": "Oven",
   "itemgroup.tce": "Alternate Progression"
 }
